# duck-f1

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  CODEOWNERS  README.md  makefile  noxfile.py  pyproject.toml  workspace.yaml
.ci/: dagster.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: dagster.yaml
.devcontainer/scripts/: post_create.sh
.github/: dependabot.yml
.github/workflows/: cron-update-dependencies.yml  cron-update-seeds.yml  dbt.yml  main-github-pages.yml  pull-request.yml  python.yml
config/: ergast.yaml  live_timing.yaml
docs/: live_timing_datasets.md
duck_f1/: __main__.py  cli.py
duck_f1/dbt_duck_f1/: dbt_project.yml  profiles.yml
duck_f1/dbt_duck_f1/macros/: live_timing__metadata.sql  live_timing__stream_ts_to_ms.sql
duck_f1/dbt_duck_f1/models/assets/: ast_driver__career.sql  ast_driver__career.yml  ast_driver__stats_career.sql  ast_driver__stats_career.yml  ast_driver__stats_seasons.sql  ast_driver__stats_seasons.yml
duck_f1/dbt_duck_f1/models/assets/docs/: assets__tables.md
duck_f1/dbt_duck_f1/models/factory/: fac_driver__championship.sql  fac_driver__championship.yml  fty_driver__championship.sql  fty_driver__season_championship.yml  fty_driver__season_race_results.sql  fty_driver__season_race_results.yml  fty_season__standings.yml  fty_season__world_champion.yml
duck_f1/dbt_duck_f1/models/factory/docs/: factory__tables.md
duck_f1/dbt_duck_f1/models/mart/: mrt_dim__drivers.sql  mrt_dim__drivers.yml
duck_f1/dbt_duck_f1/models/mart/docs/: mart__tables.md
duck_f1/dbt_duck_f1/models/staging/ergast/: src_ergast.yml  stg_ergast__circuits.sql  stg_ergast__circuits.yml  stg_ergast__constructor_results.sql  stg_ergast__constructor_results.yml  stg_ergast__constructor_standings.sql  stg_ergast__constructor_standings.yml  stg_ergast__constructors.sql  stg_ergast__constructors.yml  stg_ergast__driver_standings.sql  stg_ergast__driver_standings.yml  stg_ergast__drivers.sql  stg_ergast__drivers.yml  stg_ergast__lap_times.sql  stg_ergast__lap_times.yml  stg_ergast__pit_stops.sql  stg_ergast__pit_stops.yml  stg_ergast__qualifying.sql  stg_ergast__qualifying.yml  stg_ergast__races.sql  stg_ergast__races.yml  stg_ergast__results.sql  stg_ergast__results.yml  stg_ergast__seasons.sql  stg_ergast__seasons.yml  stg_ergast__sprint_results.sql  stg_ergast__sprint_results.yml  (+2 more)
duck_f1/pipelines/: __init__.py  jobs.py
duck_f1/pipelines/assets/: __init__.py
duck_f1/pipelines/assets/duckdb/: dbt.py  ergast.py  live_timing.py  migrations.py
duck_f1/pipelines/assets/ergast/: __init__.py  config.py  duckdb.py  ergast.py  parquet.py  values.yaml
duck_f1/pipelines/assets/live_timing/: __init__.py  config.py  live_timing.py  partitions.py  processors.py  sessions.py
duck_f1/pipelines/resources/: __init__.py  file_system_io_manager.py
duck_f1/transform/: dbt_project.yml  profiles.yml
duck_f1/transform/macros/: live_timing__empty_metadata.sql  live_timing__metadata.sql
duck_f1/transform/models/: overview.md
duck_f1/transform/models/factory/: fty_driver__season_championship.yml  fty_season__world_champion.sql
duck_f1/transform/models/ingress/: ing__ergast.yml  ing__live_timing.yml
src/duck_f1/: cli.py
src/duck_f1/pipelines/: __init__.py  constants.py  jobs.py
src/duck_f1/pipelines/assets/: __init__.py
src/duck_f1/pipelines/resources/: __init__.py  file_system_io_manager.py
src/duck_f1/transform/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
src/duck_f1/transform/macros/: check_if_source_exists.sql  ergast__lap_time_to_interval.sql  generate_schema_name.sql  live_timing__empty_metadata.sql  live_timing__metadata.sql
src/duck_f1/transform/models/: overview.md
src/duck_f1/transform/seeds/: countries.csv  countries.yml  session_availability.yml
tasks/: generate_live_timing_config.py  generate_live_timing_dataset_availability.py  generate_live_timing_test_data.py
templates/: CHANGELOG.md.j2
tests/unit/: ergast_manager_test.py  live_timing_api_test.py  live_timing_config_test.py  live_timing_manager_test.py  live_timing_partition_test.py  live_timing_processors_test.py  live_timing_session_test.py  pipelines_resources_test.py
tests/unit/assets/: live_timing_archive_status.json  live_timing_audio_streams.json  live_timing_car_data.json  live_timing_championship_prediction.json  live_timing_config.yaml  live_timing_current_tyres.json  live_timing_driver_list.json  live_timing_driver_race_info.json  live_timing_extrapolated_clock.json  live_timing_heartbeat.json  live_timing_index.json  live_timing_lap_count.json  live_timing_lap_series.json  live_timing_pit_lane_time_collection.json  live_timing_position.json  live_timing_race_control_messages.json  live_timing_session_data.json  live_timing_session_info.json  live_timing_session_status.json  live_timing_timing_data.json  live_timing_timing_stats.json  live_timing_tla_rcm.json  live_timing_track_status.json  live_timing_tyre_stint_series.json  live_timing_weather_data.json
(+381 files in other folders)
