[project]
authors = [{ name = "Marc-Etienne Madore", email = "marc-etienne@madore.cc" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "dagster<1.7.0,>=1.6.5",
    "dagster-dbt<1.0.0,>=0.22.5",
    "dagster-duckdb<1.0.0,>=0.22.5",
    "dbt-duckdb<2.0.0,>=1.7.1",
    "duckdb<1,>=0",
    "pyarrow<16.0.0,>=15.0.0",
    "requests<3.0.0,>=2.31.0",
]
name = "duck-f1"
version = "0.1.0"
description = "Formula 1 historical and telemetry datasets with DuckDB"
readme = "README.md"

[project.scripts]
duck-f1 = "duck_f1.cli:cli"

[tool.black]
line-length = 100

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "dagster-webserver<2.0.0,>=1.6.5",
    "harlequin<2.0.0,>=1.15.0",
    "flake8<7.0.0,>=6.1.0",
    "pytest<8.0.0,>=7.4.4",
    "coverage<8.0.0,>=7.4.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
