[project]
name = "duck-f1"
version = "0.2.0"
description = "Formula 1 historical and telemetry datasets with DuckDB"
readme = "README.md"
authors = [{ name = "Marc-Etienne Madore", email = "marc-etienne@madore.cc" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "dagster>=1.6.5,<1.7.0",
    "dagster-dbt>=0.22.5,<1.0.0",
    "dagster-duckdb>=0.22.5,<1.0.0",
    "dbt-duckdb>=1.7.1,<2.0.0,",
    "duckdb>=0,<1",
    "pyarrow>=15.0.0,<16.0.0",
    "requests>=2.31.0,<3.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["formula1", "f1", "data", "statistic", "visualization"]
license = { text = "GPL-3.0-or-later" }

[project.scripts]
duck-f1 = "duck_f1.cli:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["dagster-webserver<2.0.0,>=1.6.5", "pandas<3.0.0,>=2.0.0"]
test = ["pytest<9.1.0,>=9.0.1", "coverage<8.0.0,>=7.4.1", "nox>=2024.4.15"]
lint = ["sqlfluff-templater-dbt<4.0.0,>=3.1.0", "ruff<1.0.0,>=0.5.5"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.semantic_release]
assets = []
build_command = "pdm build"
build_command_env = []
commit_message = "build(release): bump version to {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
repo_dir = "/workspaces/duck-f1"
no_git_verify = false
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["chore", "ci", "style"]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "memadore <memadore@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
